syntax = "proto3";

option go_package = "/Users/yelei/data/code/go-projects/k3gin/app/gin_grpc/user_pb";


package user_pb;

service UserInfo {
  rpc AddUser(User) returns (UserID);
  rpc GetUser(UserID)  returns (User);
}

message User {
  string userID = 1;
  string name = 2;
  string description = 3;
}

message UserID {
  string userID = 1;
}


